--- a/windows/active.html
+++ b/windows/active.html
@@ -9,25 +9,26 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css"
+      href="/../css/bootstrap-5.3.2-dist/css/bootstrap.min.css"
     />
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="/../css/style.min.css" rel="stylesheet" />
   </head>
 
   <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
       <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-        <a href="index.html" class="navbar-brand px-lg-4 m-0">
+        <a href="/../index.html" class="navbar-brand px-lg-4 m-0">
           <h1 class="m-0 display-4 text-uppercase text-white">SERVERS</h1>
         </a>
         <div class="navbar-nav ml-auto p-4">
-          <a href="index.html" class="nav-item nav-link active">DHCP</a>
-          <a href="ftp.html" class="nav-item nav-link">FTP</a>
-          <a href="smtp.html" class="nav-item nav-link">SMTP</a>
-          <a href="http.html" class="nav-item nav-link">HTTP</a>
-          <a href="active.html" class="nav-item nav-link"
+          <a href="/../index.html" class="nav-item nav-link active">Home</a>
+          <a href="/windows/dhcp.html" class="nav-item nav-link active">DHCP</a>
+          <a href="/windows/ftp.html" class="nav-item nav-link">FTP</a>
+          <a href="/windows/smtp.html" class="nav-item nav-link">SMTP</a>
+          <a href="/windows/http.html" class="nav-item nav-link">HTTP</a>
+          <a href="/windows/active.html" class="nav-item nav-link"
             >Active Directory y DNS</a
           >
         </div>
@@ -65,7 +66,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/2.png"
+                  src="/../imgRedes/2.png"
                   alt=""
                 />
               </div>
@@ -89,7 +90,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/ip.png"
+                  src="/../imgRedes/ip.png"
                   alt=""
                 />
               </div>
@@ -114,7 +115,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/7.png"
+                  src="/../imgRedes/7.png"
                   alt=""
                 />
               </div>
@@ -136,7 +137,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/10.png"
+                  src="/../imgRedes/10.png"
                   alt=""
                 />
               </div>
@@ -158,7 +159,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/11.png"
+                  src="/../imgRedes/11.png"
                   alt=""
                 />
               </div>
@@ -180,7 +181,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/12.png"
+                  src="/../imgRedes/12.png"
                   alt=""
                 />
               </div>
@@ -202,7 +203,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/14.png"
+                  src="/../imgRedes/14.png"
                   alt=""
                 />
               </div>
@@ -221,7 +222,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/15.png"
+                  src="/../imgRedes/15.png"
                   alt=""
                 />
               </div>
@@ -243,7 +244,7 @@
               <div class="col-sm-5">
                 <img
                   class="img-fluid mb-3 mb-sm-0"
-                  src="imgRedes/16.png"
+                  src="/../imgRedes/16.png"
                   alt=""
                 />
               </div>
@@ -287,6 +288,6 @@
     <!-- Footer End -->
 
     <!-- JavaScript Libraries -->
-    <script src="css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/../css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
