--- a/windows/ftp.html
+++ b/windows/ftp.html
@@ -8,24 +8,25 @@
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
 
-    <link rel="stylesheet" href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="/../css/style.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-          <a href="index.html" class="navbar-brand px-lg-4 m-0">
+          <a href="/../index.html" class="navbar-brand px-lg-4 m-0">
             <h1 class="m-0 display-4 text-uppercase text-white">SERVERS</h1>
           </a>
           <div class="navbar-nav ml-auto p-4">
-            <a href="index.html" class="nav-item nav-link active">DHCP</a>
-            <a href="ftp.html" class="nav-item nav-link">FTP</a>
-            <a href="smtp.html" class="nav-item nav-link">SMTP</a>
-            <a href="http.html" class="nav-item nav-link">HTTP</a>
-            <a href="active.html" class="nav-item nav-link"
+            <a href="/../index.html" class="nav-item nav-link active">Home</a>
+            <a href="/windows/dhcp.html" class="nav-item nav-link active">DHCP</a>
+            <a href="/windows/ftp.html" class="nav-item nav-link">FTP</a>
+            <a href="/windows/smtp.html" class="nav-item nav-link">SMTP</a>
+            <a href="/windows/http.html" class="nav-item nav-link">HTTP</a>
+            <a href="/windows/active.html" class="nav-item nav-link"
               >Active Directory y DNS</a
             >
           </div>
@@ -55,7 +56,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/33.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/33.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-download service-icon"></i>Instalamos FTP</h4>
@@ -70,7 +71,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/34.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/34.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-tasks service-icon"></i>Verificar el proceso de instalación.</h4>
@@ -85,7 +86,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/35.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/35.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-search service-icon"></i>Validar que esté funcionando el HHTTP</h4>
@@ -100,7 +101,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/36.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/36.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-file service-icon"></i>Agregamos un sitio FTP.</h4>
@@ -115,7 +116,7 @@
                 <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/37.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/37.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-cog service-icon"></i>Configuramos el servicio de FTP.</h4>
@@ -130,7 +131,7 @@
                  <div class="col-lg-6 mb-5">
                     <div class="row align-items-center">
                         <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/38.png" alt="">
+                            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/38.png" alt="">
                         </div>
                         <div class="col-sm-7">
                             <h4><i class="fa fa-rss service-icon"></i>Validamos su funcionamiento.</h4>
@@ -172,7 +173,7 @@
     <!-- Footer End -->
 
     <!-- JavaScript Libraries -->
-    <script src="css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/../css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
