--- a/windows/http.html
+++ b/windows/http.html
@@ -8,30 +8,31 @@
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
 
-    <link rel="stylesheet" href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="/../css/style.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
-        <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-          <a href="index.html" class="navbar-brand px-lg-4 m-0">
-            <h1 class="m-0 display-4 text-uppercase text-white">SERVERS</h1>
-          </a>
-          <div class="navbar-nav ml-auto p-4">
-            <a href="index.html" class="nav-item nav-link active">DHCP</a>
-            <a href="ftp.html" class="nav-item nav-link">FTP</a>
-            <a href="smtp.html" class="nav-item nav-link">SMTP</a>
-            <a href="http.html" class="nav-item nav-link">HTTP</a>
-            <a href="active.html" class="nav-item nav-link"
-              >Active Directory y DNS</a
-            >
-          </div>
-        </nav>
-      </div>
-      <!-- Navbar End -->
+      <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
+        <a href="/../index.html" class="navbar-brand px-lg-4 m-0">
+          <h1 class="m-0 display-4 text-uppercase text-white">SERVERS</h1>
+        </a>
+        <div class="navbar-nav ml-auto p-4">
+          <a href="/../index.html" class="nav-item nav-link active">Home</a>
+          <a href="/windows/dhcp.html" class="nav-item nav-link active">DHCP</a>
+          <a href="/windows/ftp.html" class="nav-item nav-link">FTP</a>
+          <a href="/windows/smtp.html" class="nav-item nav-link">SMTP</a>
+          <a href="/windows/http.html" class="nav-item nav-link">HTTP</a>
+          <a href="/windows/active.html" class="nav-item nav-link"
+            >Active Directory y DNS</a
+          >
+        </div>
+      </nav>
+    </div>
+    <!-- Navbar End -->
   
 
 
@@ -56,7 +57,7 @@
                     <p>
                       Vamos a la sección de roles y características, buscamos la característica Servidor Web IIS; la seleccionamos. Damos clic hasta en el siguiente hasta llegar a la instalación. En ese apartado nos indicarán las características que se van a instalar.
                     </p>
-                    <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/iss.png" alt="">
+                    <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/iss.png" alt="">
                 </div>
 
                 <div class="col-lg-4 py-0 py-lg-5">
@@ -64,7 +65,7 @@
                     <p>
                       Por defecto, cuando instalamos la característica IIS, esta nos cargara una página por default con la dirección del servidor, en nuestro caso, http://192.168.1.1. De esta manera, cuando accedamos a ella desde un navegador, nos mostrará la siguiente página:
                     </p>
-                    <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/35.png" alt="">
+                    <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/35.png" alt="">
                 </div>
 
             </div>
@@ -98,7 +99,7 @@
     <!-- Footer End -->
 
     <!-- JavaScript Libraries -->
-    <script src="css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/../css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
