--- a/windows/smtp.html
+++ b/windows/smtp.html
@@ -7,24 +7,25 @@
     <meta content="Free Website Template" name="keywords" />
     <meta content="Free Website Template" name="description" />
 
-    <link rel="stylesheet" href="css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.min.css" rel="stylesheet" />
+    <link href="../css/style.min.css" rel="stylesheet" />
   </head>
 
   <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
       <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
-        <a href="index.html" class="navbar-brand px-lg-4 m-0">
+        <a href="/../index.html" class="navbar-brand px-lg-4 m-0">
           <h1 class="m-0 display-4 text-uppercase text-white">SERVERS</h1>
         </a>
         <div class="navbar-nav ml-auto p-4">
-          <a href="index.html" class="nav-item nav-link active">DHCP</a>
-          <a href="ftp.html" class="nav-item nav-link">FTP</a>
-          <a href="smtp.html" class="nav-item nav-link">SMTP</a>
-          <a href="http.html" class="nav-item nav-link">HTTP</a>
-          <a href="active.html" class="nav-item nav-link"
+          <a href="/../index.html" class="nav-item nav-link active">Home</a>
+          <a href="/windows/dhcp.html" class="nav-item nav-link active">DHCP</a>
+          <a href="/windows/ftp.html" class="nav-item nav-link">FTP</a>
+          <a href="/windows/smtp.html" class="nav-item nav-link">SMTP</a>
+          <a href="/windows/http.html" class="nav-item nav-link">HTTP</a>
+          <a href="/windows/active.html" class="nav-item nav-link"
             >Active Directory y DNS</a
           >
         </div>
@@ -60,7 +61,7 @@
             <p>
               Vamos a la sección de agregar roles y características. En el apartado de características del servidor buscamos "servidor SMTP", lo seleccionamos e instalamos.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/40.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/40.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -68,7 +69,7 @@
             <p>
               En este apartado simplemente le damos un nombre al servidor.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/41.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/41.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -76,7 +77,7 @@
             <p>
               Para esto, nos dirigimos al administrador ISS, abrimos el asistente para un nuevo servidor SMTP y seleccionamos nuestra IP, en nuestro caso es 192.168.1.1, y le damos clic en siguiente.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/42.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/42.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -84,7 +85,7 @@
             <p>
               En este caso, decidí darle el dominio uptcrobin.edu.co, para que los emails sean "test@uptcrobin.edu.co".
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/43.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/43.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -92,7 +93,7 @@
             <p>
               Para que funcione correctamente nuestro SMTP, debemos de tener instalados el .NET, en su preferencia el 3.5 y 4.5. El procedimiento es el mismo: vamos a roles y características, seleccionamos .net y damos siguiente, siguiente hasta instalar.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/44.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/44.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -100,8 +101,8 @@
             <p>
               Para el envío de correos podemos usar un cliente Telnet y probar el envío de correos por consola, aunque existe otra opción, la cual es usar las herramientas Thunderbird y HmailServer para realizar la interacción de email más amigable y funcional.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/thunderbird.jpg" alt="" />
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/hmailServer.jpg" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/thunderbird.jpg" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/hmailServer.jpg" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -109,14 +110,14 @@
             <p>
               Inicialmente, no pedirá que nos conectemos a un HOST y nos pedirá una contraseña. Una vez tengamos esto, podemos ir a configurar el dominio y usuarios del servidor de mails.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/1HmaliServer.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/1HmaliServer.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
             <h1 class="mb-3">Configuramos HmailServer - parte 2</h1>
             <p>
               Debemos crear un dominio. Para nuestro caso, elegí uptcrobin.edu.co, con esto garantizamos que nuestros correos tengan esta extensión 'XXXXX@uptcrobin.edu.co'.            </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/2HmailServer.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/2HmailServer.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -124,14 +125,14 @@
             <p>
               Debemos crear nuestros usuarios, en este caso he creado 2 correos que se pueden evidenciar en la siguiente imagen.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/3HmailServer.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/3HmailServer.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
             <h1 class="mb-3">Validar que ambas máquinas estén en la misma red.</h1>
             <p>
               Haciendo uso del CMD o la PowerShell, ingresamos el comando ipconfig y validamos que ambas direcciones coincidan al menos hasta el 3 octeto.            </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/49.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/49.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -139,8 +140,8 @@
             <p>
               Una vez tengamos descargado el software Thunderbird, este permitirá el envío de mensajes entre correos, para lograr esto, debemos configurar nuestro correo de la siguiente manera, tener en cuenta que ambas máquinas deben estar en la misma red o conectadas a nuestro servidor, además se debe tener claro cuál es el nombre de nuestro dominio, es este caso robinaguilar.co.
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/46.png" alt="" />
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/47.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/46.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/47.png" alt="" />
           </div>
 
           <div class="col-lg-4 py-0 py-lg-5">
@@ -148,7 +149,7 @@
             <p>
               Una vez están configuradas en la misma red y se halla configurado el Thunderbird de manera correcta, podemos enviarnos correos entre dos usuarios, como se evidencia a continuación:
             </p>
-            <img class="img-fluid mb-3 mb-sm-0" src="imgRedes/48.png" alt="" />
+            <img class="img-fluid mb-3 mb-sm-0" src="/../imgRedes/48.png" alt="" />
           </div>
 
 
@@ -182,6 +183,6 @@
       </div>
     </div>
     <!-- Footer End -->
-    <script src="css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/../css/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
